Remove lazy matching

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -20,9 +20,9 @@
     "pep621",
     "pre-commit"
   ],
-  "github-actions": { "fileMatch": ["(^|.*?/)\\.github/workflows/[^/]+?$"] },
+  "github-actions": { "fileMatch": ["(^|.*/)\\.github/workflows/[^/]+$"] },
   "pep621": {
-    "fileMatch": ["(^|.*?/)pyproject\\.toml[^/]*?$"],
+    "fileMatch": ["(^|.*/)pyproject\\.toml[^/]*$"],
     "rangeStrategy": "bump"
   },
   "ignoreDeps": ["towncrier"],
@@ -30,32 +30,32 @@
     {
       "description": "uv",
       "customType": "regex",
-      "fileMatch": ["(^|/)\\.uv-version[^/]*?$"],
-      "matchStrings": ["(?<currentValue>[^\\n]+?)"],
+      "fileMatch": ["(^|/)\\.uv-version[^/]*$"],
+      "matchStrings": ["(?<currentValue>[^\\n]+)"],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "astral-sh/uv"
     },
     {
       "description": "uv-gha",
       "customType": "regex",
-      "fileMatch": ["(^|/)\\.github/workflows/[^/]*?$"],
-      "matchStrings": ["- uses: \"astral-sh/setup-uv@.+?\\n\\s+?with:\\n\\s+?version:\\s\"(?<currentValue>.+?)\""],
+      "fileMatch": ["(^|/)\\.github/workflows/[^/]*$"],
+      "matchStrings": ["- uses: \"astral-sh/setup-uv@.+\\n\\s+with:\\n\\s+version:\\s\"(?<currentValue>.+)\""],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "astral-sh/uv"
     },
     {
       "description": "pylance",
       "customType": "regex",
-      "fileMatch": ["(^|/)\\.pylance-version[^/]*?$"],
-      "matchStrings": ["(?<currentValue>[^\\n]+?)"],
+      "fileMatch": ["(^|/)\\.pylance-version[^/]*$"],
+      "matchStrings": ["(?<currentValue>[^\\n]+)"],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "microsoft/pylance-release"
     },
     {
       "description": "copier",
       "customType": "regex",
-      "fileMatch": ["(^|.*?/)\\.copier-version[^/]*?$"],
-      "matchStrings": ["(?<currentValue>[^\\n]+?)"],
+      "fileMatch": ["(^|.*/)\\.copier-version[^/]*$"],
+      "matchStrings": ["(?<currentValue>[^\\n]+)"],
       "datasourceTemplate": "pypi",
       "depNameTemplate": "copier"
     }
@@ -63,7 +63,7 @@
   "packageRules": [
     {
       "groupName": "all",
-      "matchPackageNames": ["*?"]
+      "matchPackageNames": ["*"]
     }
   ]
 }
