Revert this bit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@ exclude: |
   (?x)^(
     \.copier-answers\.yml
     |changelog/towncrier_template\.md\.jinja
-    |template/{{ _copier_conf\.answers_file }}\.jinja
+    |template/.*answers_file.*\.jinja
   )$
 ci:
   skip:
