--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -181,7 +181,7 @@
     {
       "label": "task: Release version",
       "type": "shell",
-      "command": ". ./dev.ps1 && Invoke-Uv && ($Version = (Get-Content '.copier-answers.yml' | Find-Pattern '^project_version:s(.+)$')) && git tag --sign -m $Version $Version && git push && gh release create --discussion-category='announcements' --notes='' --title=$Version --verify-tag $Version",
+      "command": ". ./dev.ps1 && Invoke-Uv && ($Version = (Get-Content '.copier-answers.yml' | Find-Pattern '^project_version:\\s(.+)$')) && git tag --sign -m $Version $Version && git push && gh release create --discussion-category='announcements' --notes='' --title=$Version --verify-tag $Version",
       "icon": { "id": "tag" },
       "problemMatcher": []
     },
