--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,9 +3,7 @@ name: "release"
 concurrency:
   group: "${{ github.workflow }}-${{ github.ref }}"
   cancel-in-progress: True
-on:
-  release:
-    types: ["published"]
+on: ["release"]
 defaults:
   run:
     shell: "pwsh"
