--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: "release"
 concurrency:
   group: "${{ github.workflow }}-${{ github.ref }}"
   cancel-in-progress: True
-on: ["release"]
+on: ["workflow_dispatch"]
 defaults:
   run:
     shell: "pwsh"
